fIX(tabs): improve close btns on safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -289,7 +289,6 @@ $bg-color--accent4: $__moss-green;
   height: 20px;
   margin-bottom: 15px;
   padding: 0;
-  text-indent: -9999px;
   background-color: transparent;
   border: none;
   overflow: hidden;
